--- a/package.json
+++ b/package.json
@@ -14,16 +14,22 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "calendar-dates": "^2.7.2",
+    "date-fns": "^2.30.0",
     "formik": "^2.4.2",
-    "react": "^18.1.0",
+    "js-cookie": "^3.0.5",
+    "nanoid": "^4.0.2",
+    "notiflix": "^3.2.6",
+    "react": "^18.2.0",
     "react-dom": "^18.1.0",
+    "react-i18next": "^13.0.1",
     "react-redux": "^8.1.1",
     "react-responsive": "^9.0.2",
-    "react-router-dom": "^6.13.0",
+    "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "styled-components": "^6.0.1",
     "web-vitals": "^2.1.3",
     "yup": "^1.2.0"
   },
