--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.5",
+    "@mui/x-date-pickers": "^6.9.1",
     "@redux-devtools/extension": "^3.2.5",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.3",
@@ -14,7 +15,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "calendar-dates": "^2.7.2",
+    "dayjs": "^1.11.9",
     "formik": "^2.4.2",
+    "moment": "^2.29.4",
+    "notiflix": "^3.2.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.1.1",
