--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
-    "react-swipeable-views": "^0.14.0",
+    "react-swipeable-views-react-18-fix": "^0.14.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3",
