--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "notiflix": "^3.2.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.1.1",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.13.0",
