--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "@mui/x-date-pickers": "^6.9.1",
     "@redux-devtools/extension": "^3.2.5",
@@ -26,10 +25,11 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
-    "react-swipeable-views-react-18-fix": "^0.14.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.3",
     "yup": "^1.2.0"
   },
