--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://AnastasiiaDudnik.github.io/goose-track-frontend/",
+  "homepage": "https://GoitStudentsWorks.github.io/react_node_fs65_AnastasiiaDudnik/",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
